# rockchip-soc

./: .gitignore  CLAUDE.md  Cargo.toml  PLL_USAGE.md  README.md  RK3588_PLL_COMPARISON.md  RK3588_PLL_IMPLEMENTATION.md
doc/3588/: PLL.md  PLL_ID_MAPPING.md  README.md  TEST_REPORT.md
src/: lib.rs  rst.rs
src/clock/: mod.rs  pll.rs
src/pinctrl/: fdt.rs  id.rs  mod.rs  pinconf.rs  pinmux.rs
src/pinctrl/gpio/: mod.rs
src/variants/: mod.rs
src/variants/rk3588/: mod.rs  pinmanager.rs  syscon.rs
src/variants/rk3588/cru/: consts.rs  error.rs  gate.rs  mod.rs  peripheral.rs  pll.rs
src/variants/rk3588/cru/clock/: mod.rs
src/variants/rk3588/gpio/: mod.rs  reg.rs
src/variants/rk3588/pinctrl/: iomux.rs  mod.rs  pinconf_regs.rs  pinctrl.rs
tests/: pin.rs  test.rs
