[package]
edition = "2024"
name = "rockchip-soc"
version = "0.1.0"

[dependencies]
dma-api = {version = "0.5", features = ["alloc"]}
log = "0.4"
mbarrier = "0.1"
thiserror = {version = "2", default-features = false}
tock-registers = "0.10"
fdt-edit = "0.1"
bitflags = "2"
enum_dispatch = "0.3.13"

[target.'cfg(not(any(windows, unix)))'.dev-dependencies]
bare-test = "0.7"
sdmmc = { git = "https://github.com/YanQD/sdmmc.git" }
spin = "0.10"
num-align = "0.1.0"

[build-dependencies]
bare-test-macros = "0.2"

[[test]]
harness = false
name = "test"
